using css media query to display componenrs in rows

--- a/src/app/get-airports/get-airports.component.html
+++ b/src/app/get-airports/get-airports.component.html
@@ -1,14 +1,7 @@
 <p>get-airports works!</p>
 
-<ul class="row">
-  <li *ngFor="let port of airport; index as i;">{{port + " " + i}}</li>
-</ul>
-
-
-
-
-
-
-
-
-
+<div class="container">
+  <div class="item" *ngFor="let port of airport; index as i;">
+    <app-airport [airport]="port"></app-airport>
+  </div>
+</div>
