--- a/src/app/get-airports/get-airports.component.css
+++ b/src/app/get-airports/get-airports.component.css
@@ -1,11 +1,23 @@
-.size {
-  color: coral;
-  width: 1100px;
-  height:1000px;
-  padding: 10px;
-  overflow: 0;
-  border-radius: 4px;
-  outline: 0;
-  overflow-y: hidden !important;
-  overflow-x: hidden !important;
+.item {
+  display: inline-block;
+  width: 98%;
+  margin: 10px 1%
 }
+
+@media only screen and (min-width: 800px) {
+  .item {
+    width: 48%;
+    margin: 10px 1%
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .item {
+    width: 10%;
+    margin: 10px 1.5%
+  }
+}
+
+
+
+/*css media queries to display components in different display widths*/
