--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<app-get-airports></app-get-airports>
+<div class="header">
+  <a routerLink="welcome">Home</a>
+  <a routerLink="airports">Airports</a>
+  <a routerLink="airports">Search Flight</a>
+</div>
+<router-outlet></router-outlet>
 
 
-<p>Elo</p>
