creating airport routing module, lazy loading in use

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="header">
-  <a routerLink="welcome">Home</a>
-  <a routerLink="airports">Airports</a>
-  <a routerLink="airports">Search Flight</a>
+  <a class="link" routerLink="welcome">Home</a>
+  <a class="link" routerLink="airports">Airports</a>
+  <a class="link" routerLink="airports">Search Flight</a>
 </div>
 <router-outlet></router-outlet>
 
