--- a/src/app/airports/components/airport/airport.component.css
+++ b/src/app/airports/components/airport/airport.component.css
@@ -1,7 +1,7 @@
 :host {
   display: block;
   text-align: center;
-  background-color: orangered;
+  background-color: darkorange;
   border-radius: 6px;
   padding: 10px 0px;
 
